--- a/src/content/projects/project-one.mdx
+++ b/src/content/projects/project-one.mdx
@@ -19,7 +19,7 @@ images:
 order: 1
 ---
 
-import Carousel from '../../components/Carousel'
+import Carousel from '../../components/Carousel';
 import ProjectSummary from '../../components/ProjectSummary.astro';
 
 <ProjectSummary
