--- a/src/content/projects/angular-form-builder.mdx
+++ b/src/content/projects/angular-form-builder.mdx
@@ -16,7 +16,7 @@ images:
 order: 4
 ---
 
-import Carousel from '../../components/Carousel'
+import Carousel from '../../components/Carousel';
 import ProjectSummary from '../../components/ProjectSummary.astro';
 
 <ProjectSummary
