--- a/src/content/projects/gemini-clone.mdx
+++ b/src/content/projects/gemini-clone.mdx
@@ -17,7 +17,7 @@ images:
 order: 5
 ---
 
-import Carousel from '../../components/Carousel'
+import Carousel from '../../components/Carousel';
 import ProjectSummary from '../../components/ProjectSummary.astro';
 
 <ProjectSummary
