--- a/src/content/projects/project-two.mdx
+++ b/src/content/projects/project-two.mdx
@@ -16,7 +16,7 @@ images:
 order: 2
 ---
 
-import Carousel from '../../components/Carousel'
+import Carousel from '../../components/Carousel';
 import ProjectSummary from '../../components/ProjectSummary.astro';
 
 <ProjectSummary
