feat: use responsive images via cloudinary api

--- a/src/content/projects/angular-form-builder.mdx
+++ b/src/content/projects/angular-form-builder.mdx
@@ -10,9 +10,9 @@ tags:
   - Spartan UI
   - Tailwind CSS
   - Vercel
-heroImage: 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364407/angular-form-builder-hero_aksh7q.webp'
+heroImage: 'angular-form-builder-hero_aksh7q'
 images:
-  - 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364407/angular-form-builder-hero_aksh7q.webp'
+  - 'angular-form-builder-hero_aksh7q'
 order: 4
 ---
 
