--- a/src/content/projects/gemini-clone.mdx
+++ b/src/content/projects/gemini-clone.mdx
@@ -11,9 +11,9 @@ tags:
   - Spartan UI
   - Tailwind CSS
   - Vercel
-heroImage: 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364406/gemini-clone-hero_va2lch.webp'
+heroImage: 'gemini-clone-hero_va2lch'
 images:
-  - 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364406/gemini-clone-hero_va2lch.webp'
+  - 'gemini-clone-hero_va2lch'
 order: 5
 ---
 
