--- a/src/content/projects/nextjs-supabase-auth.mdx
+++ b/src/content/projects/nextjs-supabase-auth.mdx
@@ -10,9 +10,9 @@ tags:
   - Tailwind CSS
   - Shadcn UI
   - Vercel
-heroImage: 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364406/nextjs-supabase-auth-hero_kqxckw.webp'
+heroImage: 'nextjs-supabase-auth-hero_kqxckw'
 images:
-  - 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364406/nextjs-supabase-auth-hero_kqxckw.webp'
+  - 'nextjs-supabase-auth-hero_kqxckw'
 order: 3
 ---
 
