--- a/src/content/projects/project-one.mdx
+++ b/src/content/projects/project-one.mdx
@@ -13,9 +13,9 @@ tags:
   - MongoDB Atlas
   - NgRx
   - OAuth 2.0
-heroImage: 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364406/project-one-hero_lzbrzd.png'
+heroImage: 'project-one-hero_lzbrzd'
 images:
-  - 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364406/project-one-hero_lzbrzd.png'
+  - 'project-one-hero_lzbrzd'
 order: 1
 ---
 
