--- a/src/content/projects/project-two.mdx
+++ b/src/content/projects/project-two.mdx
@@ -10,9 +10,9 @@ tags:
   - Pexels API
   - Angular Material
   - Vercel
-heroImage: 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364406/project-two-hero_ygchwe.webp'
+heroImage: 'project-two-hero_ygchwe'
 images:
-  - 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364406/project-two-hero_ygchwe.webp'
+  - 'project-two-hero_ygchwe'
 order: 2
 ---
 
