--- a/src/content/projects/stripe-ecommerce.mdx
+++ b/src/content/projects/stripe-ecommerce.mdx
@@ -17,9 +17,9 @@ tags:
   - Stripe
   - Vite
   - Vercel
-heroImage: 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364406/stripe-ecommerce-hero_rndgjy.webp'
+heroImage: 'stripe-ecommerce-hero_rndgjy'
 images:
-  - 'https://res.cloudinary.com/dhfi3jxq8/image/upload/v1752364406/stripe-ecommerce-hero_rndgjy.webp'
+  - 'stripe-ecommerce-hero_rndgjy'
 order: 6
 ---
 
