--- a/src/content/projects/project-two.mdx
+++ b/src/content/projects/project-two.mdx
@@ -36,4 +36,4 @@ import ProjectSummary from '../../components/ProjectSummary.astro';
 
 ## 🧠 Showcase
 
-<Carousel client:load images={frontmatter.images} />
+<Carousel client:visible images={frontmatter.images} />
