--- a/src/content/projects/stripe-ecommerce.mdx
+++ b/src/content/projects/stripe-ecommerce.mdx
@@ -59,7 +59,7 @@ import ProjectSummary from '../../components/ProjectSummary.astro';
 
 ## 🧠 Showcase
 
-<Carousel client:load images={frontmatter.images} />
+<Carousel client:visible images={frontmatter.images} />
 
 ---
 
