--- a/src/content/projects/nextjs-supabase-auth.mdx
+++ b/src/content/projects/nextjs-supabase-auth.mdx
@@ -40,4 +40,4 @@ import ProjectSummary from '../../components/ProjectSummary.astro';
 
 ## 🧠 Showcase
 
-<Carousel client:visible images={frontmatter.images} />
+<Carousel client:idle images={frontmatter.images} />
