--- a/src/content/projects/project-one.mdx
+++ b/src/content/projects/project-one.mdx
@@ -52,4 +52,4 @@ This project uses a secure, custom identity provider with robust token handling 
 
 ## 🧠 Showcase
 
-<Carousel client:visible images={frontmatter.images} />
+<Carousel client:idle images={frontmatter.images} />
