refactor: use client:only

--- a/src/content/projects/angular-form-builder.mdx
+++ b/src/content/projects/angular-form-builder.mdx
@@ -44,6 +44,6 @@ A real-world example of dynamic form usage, where quizzes are generated on the f
 
 ## 🧠 Showcase
 
-<Carousel client:idle images={frontmatter.images} />
+<Carousel images={frontmatter.images} />
 
 To learn more, see the [official Angular guide on dynamic forms](https://angular.dev/guide/forms/dynamic-forms).
