--- a/src/content/projects/gemini-clone.mdx
+++ b/src/content/projects/gemini-clone.mdx
@@ -37,4 +37,4 @@ import ProjectSummary from '../../components/ProjectSummary.astro';
 
 ## 🧠 Showcase
 
-<Carousel client:idle images={frontmatter.images} />
+<Carousel images={frontmatter.images} />
