--- a/src/content/projects/stripe-ecommerce.mdx
+++ b/src/content/projects/stripe-ecommerce.mdx
@@ -23,7 +23,7 @@ images:
 order: 6
 ---
 
-import Carousel from '../../components/Carousel';
+import ImageList from '../../components/ImageList.astro';
 import ProjectSummary from '../../components/ProjectSummary.astro';
 
 <ProjectSummary
@@ -59,7 +59,7 @@ import ProjectSummary from '../../components/ProjectSummary.astro';
 
 ## 🧠 Showcase
 
-<Carousel images={frontmatter.images} />
+<ImageList images={frontmatter.images} />
 
 ---
 
