--- a/src/content/projects/angular-form-builder.mdx
+++ b/src/content/projects/angular-form-builder.mdx
@@ -16,7 +16,7 @@ images:
 order: 4
 ---
 
-import Carousel from '../../components/Carousel';
+import ImageList from '../../components/ImageList.astro';
 import ProjectSummary from '../../components/ProjectSummary.astro';
 
 <ProjectSummary
@@ -44,6 +44,6 @@ A real-world example of dynamic form usage, where quizzes are generated on the f
 
 ## 🧠 Showcase
 
-<Carousel images={frontmatter.images} />
+<ImageList images={frontmatter.images} />
 
 To learn more, see the [official Angular guide on dynamic forms](https://angular.dev/guide/forms/dynamic-forms).
