--- a/src/content/projects/nextjs-supabase-auth.mdx
+++ b/src/content/projects/nextjs-supabase-auth.mdx
@@ -16,7 +16,7 @@ images:
 order: 3
 ---
 
-import Carousel from '../../components/Carousel';
+import ImageList from '../../components/ImageList.astro';
 import ProjectSummary from '../../components/ProjectSummary.astro';
 
 <ProjectSummary
@@ -40,4 +40,4 @@ import ProjectSummary from '../../components/ProjectSummary.astro';
 
 ## 🧠 Showcase
 
-<Carousel images={frontmatter.images} />
+<ImageList images={frontmatter.images} />
