refactor: include search to features

--- a/src/content/projects/sveltekit-pokedex.mdx
+++ b/src/content/projects/sveltekit-pokedex.mdx
@@ -35,6 +35,7 @@ import ProjectSummary from '../../components/ProjectSummary.astro';
 ## 🚀 Features
 
 - **Pokémon List** – browse through all Pokémon with smooth infinite scrolling
+- **Search** – quickly find Pokémon by name or keyword  
 - **Filter by Type or Region** – quickly narrow down Pokémon
 - **Detailed Pokémon Pages** – view stats, types, abilities, and more
 - **Modern Interface** built with SvelteKit and TailwindCSS
